--- a/app/src/main/res/layout/activity_slap_detection.xml
+++ b/app/src/main/res/layout/activity_slap_detection.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="playposse.com.heavybagzombie.SlapDetectionActivity">
+    tools:context=".activity.SlapDetectionActivity">
 
     <TextView
         android:layout_width="match_parent"
