Fixed package name playposse.com -> com.playposse.

--- a/app/src/main/res/layout/activity_manual_fight.xml
+++ b/app/src/main/res/layout/activity_manual_fight.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="playposse.com.heavybagzombie.activity.ManualFightActivity">
+    tools:context="com.playposse.heavybagzombie.activity.ManualFightActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar"
