--- a/app/src/main/res/layout/activity_manual_fight.xml
+++ b/app/src/main/res/layout/activity_manual_fight.xml
@@ -30,7 +30,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:elevation="4dp">
+            android:elevation="4dp"
+            app:cardUseCompatPadding="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -66,7 +67,8 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:cardUseCompatPadding="true">
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/roundStatsViewPager"
