--- a/app/src/main/res/layout-land/activity_manual_fight.xml
+++ b/app/src/main/res/layout-land/activity_manual_fight.xml
@@ -19,66 +19,73 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
 
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:elevation="4dp"
-            app:cardUseCompatPadding="true">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-            <LinearLayout
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:elevation="4dp"
+                app:cardUseCompatPadding="true">
 
-                <TextView
-                    android:id="@+id/fightStateTextView"
-                    style="@style/Base.TextAppearance.AppCompat.Display3"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textAllCaps="true" />
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/roundInfoTextView"
-                    style="@style/Base.TextAppearance.AppCompat.Display2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center" />
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
+                    <TextView
+                        android:id="@+id/fightStateTextView"
+                        style="@style/Base.TextAppearance.AppCompat.Display3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textAllCaps="true" />
 
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            app:cardUseCompatPadding="true">
+                    <TextView
+                        android:id="@+id/roundInfoTextView"
+                        style="@style/Base.TextAppearance.AppCompat.Display2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center" />
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
 
-            <android.support.v4.view.ViewPager
-                android:id="@+id/roundStatsViewPager"
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                app:cardUseCompatPadding="true">
 
-                <android.support.design.widget.TabLayout
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/roundStatsViewPager"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    app:tabBackground="@drawable/tab_selector"
-                    app:tabGravity="center"
-                    app:tabIndicatorHeight="0dp" />
-            </android.support.v4.view.ViewPager>
-        </android.support.v7.widget.CardView>
+                    android:layout_height="wrap_content">
+
+                    <android.support.design.widget.TabLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        app:tabBackground="@drawable/tab_selector"
+                        app:tabGravity="center"
+                        app:tabIndicatorHeight="0dp" />
+                </android.support.v4.view.ViewPager>
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
 
         <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             app:cardUseCompatPadding="true">
 
