Added helpful text to microphone calibration activity.

--- a/app/src/main/res/layout/activity_microphone_calibration.xml
+++ b/app/src/main/res/layout/activity_microphone_calibration.xml
@@ -49,21 +49,17 @@
             android:layout_height="wrap_content"
             android:max="20" />
 
-
-        <TextView
-            android:id="@+id/pitchTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-
         <TextView
             android:id="@+id/slapsTextView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:text="@string/dot_bang_legend" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingTop="@dimen/activity_vertical_margin"
             android:text="@string/microphone_calibration_tips" />
     </LinearLayout>
 </LinearLayout>
