--- a/app/src/main/res/layout-land/activity_manual_fight.xml
+++ b/app/src/main/res/layout-land/activity_manual_fight.xml
@@ -44,13 +44,29 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/fightStateTextView"
-                        style="@style/Base.TextAppearance.AppCompat.Display3"
-                        android:layout_width="match_parent"
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:textAllCaps="true" />
+                        android:layout_gravity="center_horizontal"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/fightStateTextView"
+                            style="@style/Base.TextAppearance.AppCompat.Display3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:textAllCaps="true" />
+
+                        <ImageButton
+                            android:id="@+id/stopButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:paddingStart="@dimen/activity_horizontal_margin"
+                            android:src="@drawable/ic_stop_black_24dp" />
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/roundInfoTextView"
